--- a/views/client.ejs
+++ b/views/client.ejs
@@ -1,56 +1,78 @@
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script src="//cdn.techpines.io/jquery.event.drag-2.0.js"></script>
-<script src="/socket.io/socket.io.js"></script>
-<script>
-	App = {}
-	io = io.connect()
-	// Draw Function
-	App.draw = function(data) {
-		if (data.type == "dragstart") {
-			App.ctx.beginPath()
-			App.ctx.moveTo(data.x,data.y)
-		} else if (data.type == "drag") {
-			App.ctx.lineTo(data.x,data.y)
-			App.ctx.stroke()
-		} else {
-			App.ctx.stroke()
-			App.ctx.closePath()
-		}
-	}
-	// Draw from other sockets
-	io.on('draw', App.draw) 
-	// Bind click and drag events to drawing and sockets.
-	$(function() {
-		App.ctx = $('canvas')[0].getContext("2d")
-		$('canvas').live('drag dragstart dragend', function(e) {
-			offset = $(this).offset()
-			data = {
-				x: (e.clientX - offset.left), 
-				y: (e.clientY - offset.top),
-				type: e.handleObj.type
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Real Time Canvas</title>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+	<script src="//cdn.techpines.io/jquery.event.drag-2.0.js"></script>
+	<link rel="stylesheet" href="/public/stylesheets/client_style.css">
+	<script src="/socket.io/socket.io.js"></script>
+	<script>
+		App = {}
+		io = io.connect()
+
+		io.emit('connection');
+
+		// Draw Function
+		App.draw = function(data) {
+			if (data.type == "dragstart") {
+				App.ctx.beginPath()
+				App.ctx.moveTo(data.x,data.y)
+			} else if (data.type == "drag") {
+				App.ctx.lineTo(data.x,data.y)
+				App.ctx.stroke()
+			} else {
+				App.ctx.stroke()
+				App.ctx.closePath()
 			}
-			App.draw(data) // Draw yourself.
-			io.emit('drawClick', data) // Broadcast draw.
+		}
+
+		io.on('old_drawings', function(drawings) {
+			for(x in drawings) {
+				for (var i = 0; i < drawings[x].length; i++) {
+					App.draw(drawings[x][i])
+				};
+			}
 		})
-	})
 
-	// $(document).ready(function(){
-	// 	$('#canvas').attr('width', $(window).width());
-	// 	$('#canvas').attr('height', $(window).height());
-	// 	$(window).on('resize', updateDimensions);
-	// })
+		io.on('new_whiteboard', function() {
+			// Store the current transformation matrix
+			App.ctx.save();
+			// Use the identity matrix while clearing the canvas
+			App.ctx.setTransform(1, 0, 0, 1, 0, 0);
+			App.ctx.clearRect(0, 0, canvas.width, canvas.height);
+			// Restore the transform
+			App.ctx.restore();
+		})
 
-	// function updateDimensions(e) {
-	// 	var winHeight = $(window).height();
-	// 	var winWidth = $(window).width();
-	// 	$('#canvas').attr('width', winWidth);
-	// 	$('#canvas').attr('height', winHeight);
-	// }
-</script>
-<style>
-	body {
-		margin:0;
-		padding:0;
-	}
-</style>
-<canvas id="canvas" width="800px" height="400px" style="margin: 0 auto; border:1px solid black;"></canvas>
+		// Draw from other sockets
+		io.on('draw', App.draw)
+
+		// Bind click and drag events to drawing and sockets.
+		$(function() {
+			App.ctx = $('canvas')[0].getContext("2d")
+			$('canvas').live('drag dragstart dragend', function(e) {
+				offset = $(this).offset()
+				data = {
+					x: (e.clientX - offset.left), 
+					y: (e.clientY - offset.top),
+					type: e.handleObj.type
+				}
+				App.draw(data) // Draw yourself.
+				io.emit('drawClick', data) // Broadcast draw.
+			})
+		})
+
+		$(document).ready(function() {
+			$('#reset').click(function() {
+				io.emit('erase_whitebaord');
+			})
+		})
+
+	</script>
+</head>
+<body>
+	<canvas id="canvas" width="1200px" height="600px" style="margin: 0 auto; border:1px solid black;"></canvas>
+	<button id="reset">Erase Whiteboard</button>
+</body>
+</html>
